tests/compile-fail/schema-ce/references.fsx
#r "../../../artifacts/bin/Axial.Result/debug_net8.0/Axial.Result.dll"
#r "../../../artifacts/bin/Axial.Refined/debug_net8.0/Axial.Refined.dll"
#r "../../../artifacts/bin/Axial.Data/debug_net8.0/Axial.Data.dll"
#r "../../../artifacts/bin/Axial.Schema/debug_net8.0/Axial.Schema.dll"

open Axial
open Axial.Refined
open Axial.Schema
open Axial.Schema.Syntax
